--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,1 +1,30 @@
-name: Auto Update Content on: schedule: - cron: '0 */6 * * *' workflow_dispatch: jobs: update: runs-on: ubuntu-latest steps: - uses: actions/checkout@v3 with: token: ${{ secrets.GITHUB_TOKEN }} - name: 📝 Create/Update log file run: echo "✅ Auto-update successful at $(date)" >> updates.log - name: 🔧 Configure Git run: | git config user.name "github-actions[bot]" git config user.email "github-actions[bot]@users.noreply.github.com" - name: 💾 Commit changes run: | git add updates.log git commit -m "Auto-update: $(date)" || echo "ℹ️ No changes needed" - name: 🚀 Push to GitHub run: | git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }} env: GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+name: Auto Update Content
+on:
+  schedule:
+    - cron: '0 */6 * * *'
+  workflow_dispatch:
+
+permissions:
+  contents: write  # 🔑 THIS IS THE MAGIC LINE THAT FIXES 99% OF FAILURES!
+
+jobs:
+  update:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: 📝 Update content log
+        run: echo "✅ SUCCESS: Auto-update ran at $(date)" >> updates.log
+      
+      - name: 🔧 Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+      
+      - name: 💾 Commit changes
+        run: |
+          git add updates.log
+          git commit -m "Auto-update: $(date)" || echo "ℹ️ No changes needed"
+      
+      - name: 🚀 Push to repository
+        run: git push
